crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@325.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT range_merge(nummultirange(numrange(1,2)));"
---
SelectStmt@0..49
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..18 "range_merge"
      Ascii40@18..19 "("
      FuncCall@19..45
        Ident@19..32 "nummultirange"
        Ascii40@32..33 "("
        FuncCall@33..45
          Ident@33..41 "numrange"
          Ascii40@41..42 "("
          AConst@42..43
            Iconst@42..43 "1"
          Ascii44@43..44 ","
          AConst@44..45
            Iconst@44..45 "2"
  Ascii41@45..46 ")"
  Ascii41@46..47 ")"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

