crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@326.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT range_merge(nummultirange(numrange(1,2), numrange(7,8)));"
---
SelectStmt@0..64
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..60
    FuncCall@7..60
      Ident@7..18 "range_merge"
      Ascii40@18..19 "("
      FuncCall@19..60
        Ident@19..32 "nummultirange"
        Ascii40@32..33 "("
        FuncCall@33..45
          Ident@33..41 "numrange"
          Ascii40@41..42 "("
          AConst@42..43
            Iconst@42..43 "1"
          Ascii44@43..44 ","
          AConst@44..45
            Iconst@44..45 "2"
        Ascii41@45..46 ")"
        Ascii44@46..47 ","
        Whitespace@47..48 " "
        FuncCall@48..60
          Ident@48..56 "numrange"
          Ascii40@56..57 "("
          AConst@57..58
            Iconst@57..58 "7"
          Ascii44@58..59 ","
          AConst@59..60
            Iconst@59..60 "8"
  Ascii41@60..61 ")"
  Ascii41@61..62 ")"
  Ascii41@62..63 ")"
  Ascii59@63..64 ";"

